--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,13 @@
 
 body {
     font-family:'Rubik', sans-serif;
-    font-size: 1em;
+    font-size: 200%;
     color: #707070;
     text-align: center;
+}
+
+img{
+    max-width: 100%;
 }
 
 h1 {
@@ -19,6 +23,10 @@ h1 {
 h3 {
     color: #3B3B3B;
     font-size: 1.375em;
+}
+
+.borde{
+    border:#6ACBE0 thin solid;
 }
 
 /***************************************************/
